10/20/2004
----------
1. add option enable_advsearch, enable_userfolders to openwebmail.conf
2. if domainames option has more than one members and 
   option enable_domainselectmenu is set to yes, 
   only the selected domainname will become the domainname in default emails


10/14/2004
----------
1. new mirror site at Moscow, Russia
   http://openwebmail.nigilist.ru 
   (thanks to Petya Kohts, nit.AT.nigilist.ru)
2. fix a spelling mistake in the log file status names:
   "emport addressbook to pine" should be: "export addressbook to pine"
   (thanks to Dimitrios Michelinakis, dimitrios.AT.michelinakis.gr)


10/06/2004
----------
1. Austria holiday file
   (thanks to gottfried hufnagel, gottfried.hufnagel.AT.onb.ac.at)


10/04/2004
----------
1. Hellenic/Greek language file minor update
   Cool3D.Hellenic iconse update
   (thanks to Dimitris Michelinakis, dimitris.AT.michelinakis.gr)
2. misc/tools/mkcool3d/mkcool3d.sh update
   (thanks to Dimitris Michelinakis, dimitris.AT.michelinakis.gr)


09/26/2004 (version 2.41)
----------
1. French language and templates translation update
   (thanks to Nabil SEFRIOUI, admin.AT.osmium-work.com)


09/24/2004
----------
1. fix a bug in addressbook csv export routine which didn't check if the 
   exported fields contain commas, so the resulting csv may be misunderstood
   by other programs. 
   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his fix)
2. fix bugs in pine addressbook import routine
   a. entries across multiple lines were not parsed properly
   b. mime encoded strings were not decoded properly
   (reported by zlb.AT.lsec.cc.ac.cn)
3. fix a bug in maildb.pl which didn't reset message type variable between 
   loop and caused openwebmail to have wrong message size/count for folders
   in some cases.

ps: This wrong size/count summary bug won't hurt the consistence of mail 
    folder and related index, but we suggest that sites running imapd/pop3d 