@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041020
+releasedate		20041022
 
 ##############################################################################
 # host dependent configuration
